z-index fix

--- a/webroot/css/default.css
+++ b/webroot/css/default.css
@@ -4,16 +4,42 @@ body{
 body,html{
     height: 100%;
 }
+nav{
+    background-image: linear-gradient(to right, #000000, #20486B , #000000);
+    border-bottom: 4px solid #006064;
+}
 .sc-col-primary, li a{
     color:#20486B !important;
 }
 
-.sc-bg-none{
-    background-color: transparent;
-    z-index: 1000;
+.sc-bg-none {
+    background-color: transparent !important;
+    z-index: 100;
     border-bottom: 2px ridge #20486B;
     overflow: hidden;
     box-shadow: inset 0 0 0 200px rgba(62,39,35,0.4);
+}
+
+.sidenav{
+    background-color: transparent !important;
+    border-right: 4px ridge #006064;
+    overflow: hidden;
+    box-shadow: inset 0 0 0 200px rgba(69, 90, 100,0.9) !important;
+}
+.sidenav li{
+    border-top: 1px solid white;
+    border-bottom: 1px solid white;
+    background-color: transparent;
+    margin: 8px;
+}
+
+.sidenav li a, .sidenav-text{
+    padding: 4px 8px;
+    color: white !important;
+    text-shadow: 0 1.5px black;
+}
+.sidenav li a{
+    font-size: 14px;
 }
 .sc-bg-none a,.sc-bg-none h5,.sc-text-shadow {
     text-shadow: 2px 2px #20486B;
@@ -59,9 +85,10 @@ body,html{
 .parallax-container{
     height: 200px;
 }
-nav{
-    background-image: linear-gradient(to right, #000000, #20486B , #000000);
-    border-bottom: 4px solid #006064;
+nav .nav-wrapper{
+    position: fixed !important;
+    height: auto !important;
+    width: 100%;
 }
 .carousel-item{
     margin: 0 8px;
